--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,7 +146,7 @@ input.ng-touched.ng-valid {
 .promocode {
   color: #00B7FF;
   text-align: left;
-  top: 40px;
+  top: auto;
   margin: 10px;
   padding: 10px;
   position: relative;
